# src/main/java/com/itplace/userapi/user/controller/UserCouponController.java
@@ -1,12 +1,8 @@
 package com.itplace.userapi.user.controller;
 
 import com.itplace.userapi.common.ApiResponse;
-import com.itplace.userapi.security.auth.common.PrincipalDetails;
 import com.itplace.userapi.user.UserCode;
-import com.itplace.userapi.user.service.UserService;
-import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
@@ -14,17 +10,11 @@ import org.springframework.web.bind.annotation.RestController;
 @io.swagger.v3.oas.annotations.tags.Tag(name = "User", description = "사용자 마이페이지 관련 API")
 @RestController
 @RequestMapping("/api/v1/users")
-@RequiredArgsConstructor
 public class UserCouponController {
-    private final UserService userService;
 
     @GetMapping("/coupon")
-    public ResponseEntity<ApiResponse<Integer>> getMyCouponCount(
-            @AuthenticationPrincipal PrincipalDetails principalDetails
-    ) {
-        Long userId = principalDetails.getUserId();
-        Integer response = userService.getUserCouponCount(userId);
-        ApiResponse<Integer> body = ApiResponse.of(UserCode.COUPON_COUNT_SUCCESS, response);
+    public ResponseEntity<ApiResponse<Integer>> getMyCouponCount() {
+        ApiResponse<Integer> body = ApiResponse.of(UserCode.COUPON_EVENT_DISABLED, 0);
         return new ResponseEntity<>(body, body.getStatus());
     }
 }
